# LLVMSlicing

./: CMakeLists.txt  README.md
cmake/: FindLLVM.cmake
include/: CGFilter.h  CMakeLists.txt  GlobalVarDCE.h  IRSlicer.h  ReachingDef.h  debug.h
lib/: BBInstrument.cpp  BBProfiling.cpp  CMakeLists.txt  ComputeIns.cpp  ComputeIns.cpp.backup  DataFlow.cpp  GlobalVarDCE.cpp  IRSlicer.cpp  InstTemplate.cpp  ModuleTest.cpp  OmpProfiling.cpp  OutputOmpResult.cpp  OutputResult.cpp  ReachingDef.cpp  Test.cpp
libprofile/: WriteOpenMPProfile.bc  WriteOpenMPProfile.cpp
src/: BBInstrument.cpp  CGFilter.cpp  CMakeLists.txt  ComputeIns.cpp  DataFlow.cpp  DataFlow.h  IRSlicer.cpp  MyTest.cpp  ReachingDef.cpp  ReachingDef.h  SimpleAliasTest.cpp  SimpleEvaluator.cpp  Test.cpp  inst-timing.c  libfn-timing.c
test/: MM.cpp  MM_serial.cpp  mm.c  mm.ll  mm_serial.ll  print.c  result.O1.ll  result.ll  result1.ll  result3.ll  result4.ll  result5.ll  sp.A.O3.ll  sp.A.ll  sum.c  sum.ll  sum_readfile.c  sum_readfile.ll  sum_readfile_O1.ll  sum_readfile_O3.ll  sum_serial.c  sum_serial.ll  sum_serial1.c  sum_serial1.ll  test.c  test.ll  test1.ll  test2.ll
test/MonteCarlo/: a.out  montecarlo.c  montecarlo.ll
test/NPB3.0-omp-C/EP/: Makefile  ep.bc  ep.c  ep.ll  npbparams.h
test/NPB3.0-omp-C/LU/: Makefile  lu.c  lu.c.opari.inc  lu.mod.c  opari.rc  opari.tab.c
test/NPB3.0-omp-C/common/: c_print_results.bc  c_randdp.bc  c_timers.bc
test/NPB3.0-omp-C/config/: make.def
test/NPB3.0-omp-C/sys/: make.common  setparams
test/OpenmpTest/: test.sh  time.txt
test/OpenmpTest/dijkstra_openmp/: dijkstra_openmp.c
test/OpenmpTest/yc/: data.txt  (+1 more)
test/mm/: a.out  mm.1.ll  mm.c  mm.ll  mm_result.ll
test/mymm_test/: mm.c  mm.ll  result.ll
test/papi_test/: matrixmult_papi.c
test/print/: print.ll
test/sum_read/: .sum_readfile.c.swp  a.out  ir.1.ll  ir.ll  sum_readfile.c
test/task_test/: a.out  result.ll  task_result.ll  test.c  test.ll
test/ycmm/: a.out  callgraph.dot  data.txt  mm.c  mm.ll  mm_inst  mm_inst.ll  mm_new.ll  mymm  mymm.ll  parallelgroup.3473.bbfout  result.txt  test.sh
(+87 files in other folders)
